<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F5F5">



    <LinearLayout
        android:id="@+id/main_record_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:paddingBottom="16dp">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buyer_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingBottom="8dp" />

        <EditText
            android:id="@+id/buyer_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/m1"
            android:inputType="text"
            android:hint="@string/enter_name"
            android:maxLength="20"
            android:textAlignment="center"/>

        <!-- عداد الأحرف لاسم المشتري -->
        <TextView
            android:id="@+id/buyer_name_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0/20"
            android:textAlignment="viewEnd"
            android:textSize="12sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:paddingBottom="8dp" />


        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/m1"
            android:inputType="number"
            android:hint="@string/enter_phone"
            android:maxLength="16"
            android:textAlignment="center"/>

        <!-- عداد الأحرف للهاتف -->
        <TextView
            android:id="@+id/phone_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0/16"
            android:textAlignment="viewEnd"
            android:textSize="12sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:paddingBottom="8dp" />


        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/m1"
            android:inputType="text"
            android:hint="@string/enter_address"
            android:maxLength="20"
            android:textAlignment="center"/>

        <!-- عداد الأحرف للعنوان -->
        <TextView
            android:id="@+id/address_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0/20"
            android:textAlignment="viewEnd"
            android:textSize="12sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purchase_date"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:paddingBottom="8dp" />


        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/m1"
            android:inputType="date"
            android:hint="@string/enter_date"
            android:maxLength="10"
            android:textAlignment="center"/>

        <!-- عداد الأحرف للتاريخ -->
        <TextView
            android:id="@+id/date_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0/10"
            android:textAlignment="viewEnd"
            android:textSize="12sp"/>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_material_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/r1"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/click_to_add_an_item" />


        <LinearLayout
            android:id="@+id/materials_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp">
            <!-- سيتم إضافة المواد هنا -->
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/final_amount"
                android:textSize="18sp"
                android:paddingTop="16dp"
                android:textStyle="bold"
                android:paddingBottom="8dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/total_amount"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="2"
                    android:inputType="numberDecimal"
                    android:background="@drawable/m1"
                    android:hint="@string/enter_amount"
                    android:maxLength="10"
                    android:textAlignment="center"/>




                <Spinner
                    android:id="@+id/currency_spinner"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:entries="@array/currency_array" />


            </LinearLayout>
        </LinearLayout>





        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_information"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:paddingBottom="8dp" />



        <EditText
            android:id="@+id/order_info"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/m1"
            android:inputType="text"
            android:hint="@string/optional"
            android:maxLength="30"
            android:textAlignment="center"/>

        <!-- عداد الأحرف لمعلومات الطلب -->
        <TextView
            android:id="@+id/order_info_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0/30"
            android:textAlignment="viewEnd"
            android:textSize="12sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_status"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:paddingBottom="8dp" />


        <EditText
            android:id="@+id/order_status"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/m1"
            android:inputType="text"
            android:hint="@string/optional"
            android:maxLength="20"
            android:textAlignment="center"/>
        <!-- عداد الأحرف لحالة الطلب -->
        <TextView
            android:id="@+id/order_status_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0/20"
            android:textAlignment="viewEnd"
            android:textSize="12sp"/>





        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/r1"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/created" />








    </LinearLayout>

</ScrollView>
