<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="15dp">

    <EditText
        android:id="@+id/material_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:background="@drawable/m1"
        android:inputType="text"
        android:hint="@string/double_click_to_select_a_subject" />

    <EditText
        android:id="@+id/material_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/m1"
        android:layout_weight="2"
        android:inputType="number"
        android:hint="@string/quantityy" />

    <TextView
        android:id="@+id/textview_unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/unity" />


    <ImageView
        android:id="@+id/delete_material_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/delete"
        android:contentDescription="حذف"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>
